--- a/Project/DaBank.html
+++ b/Project/DaBank.html
@@ -41,18 +41,18 @@
       <p>I tried</p>
     </div>
     <div class="col-md-8 col-md-offset-2">
-      <form name="sentMessage" id="contactForm" novalidate="">
+      <form name="sentMessage" novalidate="" id="loginForm" class="">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" id="name" class="form-control" required="required" placeholder="Username">
+              <input type="text" id="name" class="form-control" required="required" placeholder="Username" aria-invalid="false">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input class="form-control" required="required" id="email" type="email" placeholder="Password">
-              <p class="help-block text-danger"></p>
+              <input class="form-control" required="required" placeholder="Password" id="password" type="password" aria-invalid="true">
+              <p class="help-block text-danger"></p><ul role="alert"><li>Not a valid password<!-- data-validator-validpassword-message to override --></li></ul><p></p>
             </div>
           </div>
         </div>
