--- a/Project/DaBank.html
+++ b/Project/DaBank.html
@@ -33,10 +33,13 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation
     ==========================================-->
+
+
+
 <nav id="menu" class="navbar navbar-default navbar-fixed-top on">
   <div class="container">
     <div class="section-title center">
-      <h2>I forgot how menus work, help help</h2>
+      <h2>DaBank</h2>
       <hr>
       <p>I tried</p>
     </div>
@@ -64,137 +67,15 @@
     </div>
   </div>
 </nav>
-<!-- Header -->
-<header id="header">
-  <div class="intro">
-    <div class="overlay">
-      <div class="container">
-        <div class="row">
-          <div class="intro-text">
-            <h1>Da Bank 808</h1>
-            <p>Sawp Brah</p>
-            <a href="#about" class="btn btn-custom btn-lg page-scroll">Get Started or Get Farted</a> </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-<!-- About Section -->
-<div id="about">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>About Us</h2>
-      <hr>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="DaBank_files/about.jpg" class="img-responsive thumbnail" alt=""> </div>
-      <div class="col-xs-12 col-md-6">
-        <div class="about-text">
-          <h3>Pretend this description actually means something</h3>
-          <p>Lmao, I'm gonna paste the assignment instructions here</p>
-          <p>Create a Web-based Banking Application.  The primary tools 
-are:
 
-Ubuntu Server
-Apache 2 Web Server with CGI Enabled
-HTML and Python-based Web Application
-SQLite3 for Database Functionality (holds all transaction records)
-SOFTWARE Requirements
 
-This is for customers and managers to conduct banking transactions from 
-anywhere in Hawaii.
-Customers should be able to log in using a username and password.
-Customers should be able to:
-View Current Balance
-Update/Change Passwords to Their Accounts
-Bank Manager should be able to modify the balances of Customer Accounts,
- as needed by:
-Depositing Money (e.g. adding money to the customer's account)
-Withdrawing Money (e.g. subtracting money from the customer's account)
-View the balance of all customer accounts (e.g. list and sum all the 
-balances to see how much money the bank has in total)
-View the balance of the account of a specific Customer by providing the 
-account number and customer name. 
-Deliverables:
 
-Completed working web application that meets the requirements.  Attach 
-the source code in a zip file to this assignment.  Include the 
-instructions on installing the application files on the web server (e.g.
- location to place the cgi files, db file, html files, etc.).  (30 
-points)
-Microsoft Threat Model file that accurately models the infrastructure 
-and identifies threats in the application.  Attach the .tm7 file to this
- assignment.  (20 points)
-List the Top Ten threats among those identified in the Microsoft Threat 
-Model and describe how and why they were prioritized. Attach a Word 
-document to this assignment.  (20 points)
-Slide Presentation that identifies the Top 10 threats to the application
- and the way each threat was mitigated and/or addressed in the 
-application itself.  Attach the Powerpoint file to this assignment. (30 
-points)</p>
-          <div class="list-style">
-            <div class="col-lg-6 col-sm-6 col-xs-12">
-              <ul>
-                <li>This Mad</li>
-                <li>Is Lad</li>
-                <li>I should be working on getting CGI to work</li>
-                <li>But I'm making the most humbug logo right now, lmao</li>
-              </ul>
-            </div>
-            <div class="col-lg-6 col-sm-6 col-xs-12">
-              <ul>
-                <li>More Fake Menu Stuff</li>
-                <li>I kinda ripped off Bank of Hawaii</li>
-                <li>But I can't even see what this website looks like right now</li>
-                <li>Because I managed to write the html in Firefox and it looks horrible and nothing like how it is supposed to</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Services Section -->
-<div id="services" class="text-center">
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1 section-title">
-      <h2>Our Services</h2>
-      <hr>
-      <p>Hahaha more bank stuff, where's the dank stuff</p>
-    </div>
-    <div class="row">
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-home"></i>
-        <h4>You ever just think</h4>
-        <p>Man I'm really hungry</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-umbrella"></i>
-        <h4>But then you just</h4>
-        <p>Eat way too much and regret it later</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-gears"></i>
-        <h4>Because I literally</h4>
-        <p>Just did that, and now I'm full</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-language"></i>
-        <h4>Lorem Ipsum</h4>
-        <p>Just kidding, I don't speak horchata very well</p>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Pricing Section -->
 
 <!-- Contact Section -->
 
-<div id="footer">
-  <div class="container text-center">
-    <div class="fnav">
-      <p>Copyright © 2018 Da Bank 808. Designed by <a rel="nofollow" href="https://www.facebook.com/MarMayura">Dave Chappelle himself</a></p>
-    </div>
-  </div>
-</div>
+
 <script type="text/javascript" src="DaBank_files/jquery.js"></script> 
 <script type="text/javascript" src="DaBank_files/bootstrap.js"></script> 
 <script type="text/javascript" src="DaBank_files/SmoothScroll.js"></script> 
