--- a/Project/DaBank.html
+++ b/Project/DaBank.html
@@ -1,86 +1,35 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Da Bank 808</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<html>
 
-<!-- Favicons
-    ================================================== -->
-<link rel="shortcut icon" href="file:///C:/Users/Marcello/Desktop/ISA-320/img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="file:///C:/Users/Marcello/Desktop/ISA-320/img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="file:///C:/Users/Marcello/Desktop/ISA-320/img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="file:///C:/Users/Marcello/Desktop/ISA-320/img/apple-touch-icon-114x114.png">
-
-<!-- Bootstrap -->
-<link rel="stylesheet" type="text/css" href="DaBank_files/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="DaBank_files/font-awesome.css">
-
-<!-- Stylesheet
-    ================================================== -->
-<link rel="stylesheet" type="text/css" href="DaBank_files/style.css">
-<link href="DaBank_files/css.css" rel="stylesheet">
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<head>
+  <title>Welcome to DaBank!</title>
 </head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-<!-- Navigation
-    ==========================================-->
 
+<body>
+background-image:  <img src="https://liquipedia.net/commons/images/thumb/0/05/R6S_map_bank.jpg/600px-R6S_map_bank.jpg" alt="Mountain"> ;
+background-color: #32CD32;
 
+<h1>Login to DaBank</h1>
 
-<nav id="menu" class="navbar navbar-default navbar-fixed-top on">
-  <div class="container">
-    <div class="section-title center">
-      <h2>DaBank</h2>
-      <hr>
-      <p>I tried</p>
-    </div>
-    <div class="col-md-8 col-md-offset-2">
-      <form name="sentMessage" novalidate="" id="loginForm" class="">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control" required="required" placeholder="Username" aria-invalid="false">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <input class="form-control" required="required" placeholder="Password" id="password" type="password" aria-invalid="true">
-              <p class="help-block text-danger"></p><ul role="alert"><li>Not a valid password<!-- data-validator-validpassword-message to override --></li></ul><p></p>
-            </div>
-          </div>
-        </div>
-        
-        <div id="success"></div>
-        <button type="submit" class="btn btn-custom btn-lg">Log In</button>
-      </form>
-      
-    </div>
-  </div>
-</nav>
+<form name="LoginForm" action="/cgi-bin/login.pl" method="post">
 
+	<table align="center">
+  	<tr>
+    	<td>Username:</td>
+    	<td><input type="text" name="Username" /></td>
+  	</tr>
+  	<tr>
+    	<td>Password:</td>
+    	<td><input type="password" name="Password" /></td>
+  	</tr>
+  	<tr>
+    	<td colspan="2" align="right">
+      		<input type="reset"  value="Reset" />
+      		<input type="submit" value="Login" />
+    	</td>
+  	</tr>
+	</table>
+</form>
 
-
-
-<!-- Pricing Section -->
-
-<!-- Contact Section -->
-
-
-<script type="text/javascript" src="DaBank_files/jquery.js"></script> 
-<script type="text/javascript" src="DaBank_files/bootstrap.js"></script> 
-<script type="text/javascript" src="DaBank_files/SmoothScroll.js"></script> 
-<script type="text/javascript" src="DaBank_files/jqBootstrapValidation.js"></script> 
-<script type="text/javascript" src="DaBank_files/contact_me.js"></script> 
-<script type="text/javascript" src="DaBank_files/main.js"></script>
-
-</body></html>
+</body>
+</html>
