--- a/Project/DaBank3.html
+++ b/Project/DaBank3.html
@@ -8,5 +8,7 @@ background-image:  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd
  <p>Welcome DaBank Manager!</p>
  <button type="button">Deposit Money</button>
  <button type="button">Withdraw Money</button>
+ <button type="button">View Balances</button>
+ <button type="button">View Balance</button>
 </body>
 </html>
